--- a/src/vista/FXMLEditarUsuario.fxml
+++ b/src/vista/FXMLEditarUsuario.fxml
@@ -8,8 +8,7 @@
 <?import javafx.scene.shape.Line?>
 <?import javafx.scene.text.Font?>
 
-
-<AnchorPane id="AnchorPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="800.0" prefWidth="1280.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/11.0.1" fx:controller="controlador.FXMLEditarUsuarioController">
+<AnchorPane id="AnchorPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="800.0" prefWidth="1280.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controlador.FXMLEditarUsuarioController">
    <children>
       <Line endX="46.0" endY="604.0" layoutX="231.0" layoutY="196.0" startX="46.0" startY="-196.0" />
       <Label layoutX="45.0" layoutY="37.0" text="Cafetería">
@@ -24,16 +23,16 @@
          </font>
       </Label>
       <TextField fx:id="txtBuscarUsuario" layoutX="334.0" layoutY="157.0" prefHeight="36.0" prefWidth="606.0" />
-      <TextField layoutX="336.0" layoutY="263.0" prefHeight="36.0" prefWidth="781.0" />
+      <TextField fx:id="txtMatricula" layoutX="336.0" layoutY="263.0" prefHeight="36.0" prefWidth="781.0" />
       <Label layoutX="334.0" layoutY="113.0" text="Buscar usuario a editar">
          <font>
             <Font size="18.0" />
          </font>
       </Label>
       <Button fx:id="btnBuscarUsuario" layoutX="952.0" layoutY="157.0" mnemonicParsing="false" onAction="#buscarUsuario" prefHeight="36.0" prefWidth="163.0" text="Buscar" />
-      <TextField layoutX="336.0" layoutY="364.0" prefHeight="36.0" prefWidth="781.0" />
-      <TextField layoutX="334.0" layoutY="476.0" prefHeight="36.0" prefWidth="781.0" />
-      <TextField layoutX="336.0" layoutY="596.0" prefHeight="36.0" prefWidth="606.0" />
+      <TextField fx:id="txtNombre" layoutX="336.0" layoutY="364.0" prefHeight="36.0" prefWidth="781.0" />
+      <TextField fx:id="txtContrasena" layoutX="334.0" layoutY="476.0" prefHeight="36.0" prefWidth="781.0" />
+      <TextField fx:id="txtBloqueo" editable="false" layoutX="336.0" layoutY="596.0" prefHeight="36.0" prefWidth="606.0" />
       <Label layoutX="334.0" layoutY="227.0" text="Matrícula">
          <font>
             <Font size="18.0" />
