--- a/src/Ventanas/LoginCafeteriaFXML.fxml
+++ b/src/Ventanas/LoginCafeteriaFXML.fxml
@@ -2,21 +2,40 @@
 
 <?import java.net.URL?>
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.Label?>
 <?import javafx.scene.control.PasswordField?>
 <?import javafx.scene.control.TextField?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane id="AnchorPane" prefHeight="400.0" prefWidth="350.0" styleClass="mainFxmlClass" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controlador.LoginCafeteriaFXMLController">
+<AnchorPane id="AnchorPane" prefHeight="394.0" prefWidth="261.0" styleClass="mainFxmlClass" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controlador.LoginCafeteriaFXMLController">
     <stylesheets>
         <URL value="@logincafeteriafxml.css" />
     </stylesheets>
    <children>
-      <Label layoutX="60.0" layoutY="117.0" text="Matricula" />
-      <Label layoutX="55.0" layoutY="183.0" text="Contraseña" />
-      <TextField fx:id="campoMatricula" layoutX="138.0" layoutY="113.0" />
-      <Button fx:id="botonIngresar" layoutX="99.0" layoutY="250.0" mnemonicParsing="false" onAction="#ingresa" text="Ingresar" />
-      <Button fx:id="botonCancelar" layoutX="202.0" layoutY="250.0" mnemonicParsing="false" onAction="#cancela" text="Cancelar" />
-      <PasswordField fx:id="campoPass" layoutX="138.0" layoutY="179.0" />
+      <ImageView fitHeight="412.0" fitWidth="272.0" layoutY="-1.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@imagenes/8bef3713498e154406f37a20f2cfae05.jpg" />
+         </image>
+      </ImageView>
+      <TextField fx:id="campoMatricula" layoutX="94.0" layoutY="154.0" />
+      <PasswordField fx:id="campoPass" layoutX="94.0" layoutY="232.0" />
+      <Button fx:id="botonIngresar" layoutX="65.0" layoutY="318.0" mnemonicParsing="false" onAction="#ingresa" text="Ingresar" />
+      <Button fx:id="botonCancelar" layoutX="159.0" layoutY="318.0" mnemonicParsing="false" onAction="#cancela" text="Cancelar" />
+      <ImageView fitHeight="78.0" fitWidth="271.0" layoutY="31.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@imagenes/13DRAW_ff6ff4acfe02_155116685999.jpg" />
+         </image>
+      </ImageView>
+      <ImageView fitHeight="46.0" fitWidth="62.0" layoutX="23.0" layoutY="143.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@imagenes/user-login-icon-14.png" />
+         </image>
+      </ImageView>
+      <ImageView fitHeight="36.0" fitWidth="35.0" layoutX="29.0" layoutY="227.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@imagenes/password-512.png" />
+         </image>
+      </ImageView>
    </children>
 </AnchorPane>
