--- a/src/VentanaAux/EstudianteProducto.fxml
+++ b/src/VentanaAux/EstudianteProducto.fxml
@@ -6,6 +6,8 @@
 <?import com.jfoenix.controls.JFXTextField?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.Tab?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
@@ -13,7 +15,17 @@
    <tabs>
       <Tab text="Productos">
         <content>
-          <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" style="-fx-background-color: #FFDBD9;" />
+          <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" style="-fx-background-color: #FFDBD9;">
+               <children>
+                  <TableView fx:id="tvProducto" layoutX="14.0" layoutY="25.0" prefHeight="319.0" prefWidth="435.0">
+                     <columns>
+                        <TableColumn fx:id="tabNombre" prefWidth="104.0" text="Nombre" />
+                        <TableColumn fx:id="tabDesc" prefWidth="168.0" text="Descripción" />
+                        <TableColumn fx:id="tabCanti" prefWidth="91.0" text="Cantidad" />
+                        <TableColumn fx:id="tabPrecio" prefWidth="69.0" text="Precio $" />
+                     </columns>
+                  </TableView>
+               </children></AnchorPane>
         </content>
       </Tab>
       <Tab text="Sugerir Productos">
