--- a/src/VentanaAux/TabHorario.css
+++ b/src/VentanaAux/TabHorario.css
@@ -1,6 +1,6 @@
 * {
-    -fx-primary : #F3C6C3;
-    -fx-secondary : #6D3743;
+    -fx-primary : #4BB5E7;
+    -fx-secondary : #215487;
     -fx-primarytext : #B2B2B2;
     -fx-blue: #1976D2;
     -fx-red: #FF0000;
