--- a/src/VentanaAux/AdminUsuario.fxml
+++ b/src/VentanaAux/AdminUsuario.fxml
@@ -11,10 +11,9 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-
-<AnchorPane id="AnchorPane" prefHeight="400.0" prefWidth="600.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/11.0.1" fx:controller="controlador.AdminUsuarioController">
+<AnchorPane id="AnchorPane" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controlador.AdminUsuarioController">
    <children>
-      <JFXTabPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" stylesheets="@TabColor.css">
+      <JFXTabPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" stylesheets="@TabUsuario.css">
          <tabs>
             <Tab text="Usuarios">
                <content>
@@ -35,13 +34,13 @@
             </Tab>
             <Tab text="Editar usuario">
                <content>
-                  <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" style="-fx-background-color: #FFDBD9;">
+                  <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" style="-fx-background-color: #788EDE;">
                      <children>
-                        <AnchorPane id="AnchorPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="367.0" prefWidth="600.0">
+                        <AnchorPane id="AnchorPane" layoutY="14.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="367.0" prefWidth="600.0">
                            <children>
                               <TextField fx:id="txtBuscarUsuario" layoutX="14.0" layoutY="55.0" prefHeight="27.0" prefWidth="391.0" />
                               <TextField fx:id="txtMatricula" layoutX="15.0" layoutY="117.0" prefHeight="25.0" prefWidth="190.0" />
-                              <Label layoutX="14.0" layoutY="20.0" text="Matrícula del usuario a editar">
+                              <Label layoutX="14.0" layoutY="20.0" stylesheets="@TabUsuario.css" text="Matrícula del usuario a editar">
                                  <font>
                                     <Font size="18.0" />
                                  </font>
