--- a/src/VentanaAux/AdministradorProducto.fxml
+++ b/src/VentanaAux/AdministradorProducto.fxml
@@ -17,12 +17,12 @@
         <content>
           <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" style="-fx-background-color: #FFDBD9;">
                <children>
-                  <TableView fx:id="tvProducto" layoutX="14.0" layoutY="28.0" prefHeight="319.0" prefWidth="435.0">
+                  <TableView fx:id="tvProducto" layoutX="14.0" layoutY="14.0" prefHeight="331.0" prefWidth="551.0">
                     <columns>
                       <TableColumn fx:id="tabNombre" prefWidth="104.0" text="Nombre" />
-                      <TableColumn fx:id="tabDesc" prefWidth="168.0" text="Descripción" />
-                        <TableColumn fx:id="tabCanti" prefWidth="91.0" text="Cantidad" />
-                        <TableColumn fx:id="tabPrecio" prefWidth="69.0" text="Precio $" />
+                      <TableColumn fx:id="tabDesc" prefWidth="224.0" text="Descripción" />
+                        <TableColumn fx:id="tabCanti" prefWidth="89.0" text="Cantidad" />
+                        <TableColumn fx:id="tabPrecio" prefWidth="133.0" text="Precio $" />
                     </columns>
                   </TableView>
                </children></AnchorPane>
@@ -33,30 +33,30 @@
           <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" style="-fx-background-color: #FFDBD9;">
                <children>
                   <JFXButton fx:id="bAgregarProducto" layoutX="408.0" layoutY="313.0" onAction="#agregarProducto" prefHeight="36.0" prefWidth="169.0" style="-fx-background-color: #F9A29C;" text="Agregar" />
-                  <Label layoutX="52.0" layoutY="48.0" text="Nombre:">
+                  <Label layoutX="53.0" layoutY="27.0" text="Nombre:" textFill="#6d3743">
                      <font>
                         <Font name="System Bold Italic" size="12.0" />
                      </font>
                   </Label>
-                  <Label layoutX="49.0" layoutY="93.0" text="Descripción:">
+                  <Label layoutX="53.0" layoutY="84.0" text="Descripción:" textFill="#6d3743">
                      <font>
                         <Font name="System Bold Italic" size="12.0" />
                      </font>
                   </Label>
-                  <Label layoutX="50.0" layoutY="218.0" text="Cantidad:">
+                  <Label layoutX="55.0" layoutY="193.0" text="Cantidad:" textFill="#6d3743">
                      <font>
                         <Font name="System Bold Italic" size="12.0" />
                      </font>
                   </Label>
-                  <Label layoutX="58.0" layoutY="259.0" text="Precio:">
+                  <Label layoutX="58.0" layoutY="235.0" text="Precio:" textFill="#6d3743">
                      <font>
                         <Font name="System Bold Italic" size="12.0" />
                      </font>
                   </Label>
-                  <TextField fx:id="tNombre" layoutX="181.0" layoutY="44.0" />
-                  <TextArea fx:id="tDesc" layoutX="181.0" layoutY="93.0" prefHeight="78.0" prefWidth="151.0" />
-                  <TextField fx:id="tCant" layoutX="181.0" layoutY="214.0" />
-                  <TextField fx:id="tPrecio" layoutX="181.0" layoutY="255.0" />
+                  <TextField fx:id="tNombre" layoutX="53.0" layoutY="44.0" prefHeight="25.0" prefWidth="316.0" />
+                  <TextArea fx:id="tDesc" layoutX="53.0" layoutY="101.0" prefHeight="92.0" prefWidth="510.0" />
+                  <TextField fx:id="tCant" layoutX="55.0" layoutY="210.0" prefHeight="25.0" prefWidth="101.0" />
+                  <TextField fx:id="tPrecio" layoutX="56.0" layoutY="252.0" prefHeight="25.0" prefWidth="100.0" />
                </children>
             </AnchorPane>
         </content>
