--- a/src/VentanaAux/EstudianteProducto.fxml
+++ b/src/VentanaAux/EstudianteProducto.fxml
@@ -32,12 +32,12 @@
         <content>
           <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" style="-fx-background-color: #FFDBD9;">
                <children>
-                  <Label layoutX="14.0" layoutY="52.0" prefHeight="32.0" prefWidth="191.0" text="Nombre del producto:">
+                  <Label layoutX="14.0" layoutY="52.0" prefHeight="32.0" prefWidth="191.0" text="Nombre del producto:" textFill="#6d3743">
                      <font>
                         <Font name="Courier New" size="15.0" />
                      </font>
                   </Label>
-                  <Label layoutX="14.0" layoutY="121.0" prefHeight="32.0" prefWidth="231.0" text="Descripción del producto:">
+                  <Label layoutX="14.0" layoutY="121.0" prefHeight="32.0" prefWidth="231.0" text="Descripción del producto:" textFill="#6d3743">
                      <font>
                         <Font name="Courier New" size="15.0" />
                      </font>
