--- a/src/VentanaAux/TabMenu.css
+++ b/src/VentanaAux/TabMenu.css
@@ -1,6 +1,6 @@
 * {
-    -fx-primary : #F3C6C3;
-    -fx-secondary : #6D3743;
+    -fx-primary : #F3CB88;
+    -fx-secondary : #765012;
     -fx-primarytext : #B2B2B2;
     -fx-blue: #1976D2;
     -fx-red: #FF0000;
