--- a/src/VentanaAux/TabUsuario.css
+++ b/src/VentanaAux/TabUsuario.css
@@ -1,6 +1,6 @@
 * {
-    -fx-primary : #F3C6C3;
-    -fx-secondary : #6D3743;
+    -fx-primary : #5671D4;
+    -fx-secondary : #2A3251 ;
     -fx-primarytext : #B2B2B2;
     -fx-blue: #1976D2;
     -fx-red: #FF0000;
