--- a/src/VentanaAux/EstudianteProducto.fxml
+++ b/src/VentanaAux/EstudianteProducto.fxml
@@ -4,6 +4,7 @@
 <?import com.jfoenix.controls.JFXTabPane?>
 <?import com.jfoenix.controls.JFXTextArea?>
 <?import com.jfoenix.controls.JFXTextField?>
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.Tab?>
 <?import javafx.scene.control.TableColumn?>
@@ -45,6 +46,28 @@
                   <JFXTextField fx:id="textNombre" focusColor="#00ff4d" layoutX="212.0" layoutY="56.0" prefHeight="25.0" prefWidth="365.0" style="-fx-background-color: #F3C6C3;" unFocusColor="RED" />
                   <JFXTextArea fx:id="textDesc" focusColor="#00ff22" layoutX="13.0" layoutY="153.0" prefHeight="137.0" prefWidth="582.0" style="-fx-background-color: #F3C6C3;" unFocusColor="RED" />
                   <JFXButton fx:id="botonAgregar" layoutX="408.0" layoutY="313.0" onAction="#eventoAgregar" prefHeight="36.0" prefWidth="169.0" style="-fx-background-color: #F9A29C;" text="Agregar" />
+               </children>
+            </AnchorPane>
+        </content>
+      </Tab>
+      <Tab text="Reservar Producto">
+        <content>
+          <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" style="-fx-background-color: #FFDBD9;">
+               <children>
+                  <JFXTextField fx:id="txtBuscarProducto" layoutX="29.0" layoutY="49.0" prefHeight="25.0" prefWidth="397.0" />
+                  <Button fx:id="btnBuscarProducto" layoutX="447.0" layoutY="49.0" mnemonicParsing="false" onAction="#buscarProducto" prefHeight="25.0" prefWidth="111.0" text="Buscar" />
+                  <Label layoutX="29.0" layoutY="22.0" text="Buscar un producto">
+                     <font>
+                        <Font size="18.0" />
+                     </font>
+                  </Label>
+                  <Label layoutX="29.0" layoutY="117.0" text="Producto" />
+                  <Label layoutX="384.0" layoutY="117.0" text="Precio" />
+                  <Label layoutX="29.0" layoutY="219.0" text="Introduce tu matrícula para confirmar tu reservación" />
+                  <Button fx:id="btnReservarProducto" layoutX="381.0" layoutY="257.0" mnemonicParsing="false" onAction="#reservarProducto" prefHeight="25.0" prefWidth="191.0" text="Reservar ahora" />
+                  <JFXTextField fx:id="txtNombreProducto" editable="false" layoutX="29.0" layoutY="146.0" prefHeight="25.0" prefWidth="298.0" />
+                  <JFXTextField fx:id="txtPrecioProducto" editable="false" layoutX="384.0" layoutY="146.0" prefHeight="25.0" prefWidth="186.0" />
+                  <JFXTextField fx:id="txtMatricula" layoutX="29.0" layoutY="251.0" prefHeight="25.0" prefWidth="301.0" />
                </children>
             </AnchorPane>
         </content>
