--- a/src/VentanaAux/EstudianteMenu.fxml
+++ b/src/VentanaAux/EstudianteMenu.fxml
@@ -3,10 +3,14 @@
 <?import com.jfoenix.controls.JFXButton?>
 <?import com.jfoenix.controls.JFXTabPane?>
 <?import com.jfoenix.controls.JFXTextArea?>
+<?import com.jfoenix.controls.JFXTextField?>
 <?import javafx.scene.control.ChoiceBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.Tab?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.text.Font?>
 
 <JFXTabPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" stylesheets="@TabMenu.css" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controlador.EstudianteMenuController">
@@ -33,6 +37,70 @@
                         <Font name="Haettenschweiler" size="24.0" />
                      </font>
                   </Label>
+               </children>
+            </AnchorPane>
+        </content>
+      </Tab>
+      <Tab text="Buscar Menú">
+        <content>
+          <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" style="-fx-background-color: #E7CA9A;">
+               <children>
+                  <Label layoutX="38.0" layoutY="82.0" text="Ingresa nombre del menú a buscar:" textFill="#e19d65">
+                     <font>
+                        <Font name="Arial Black" size="15.0" />
+                     </font>
+                  </Label>
+                  <JFXTextField fx:id="txtBuscar" focusColor="#407ea8" layoutX="376.0" layoutY="81.0" prefHeight="25.0" prefWidth="77.0" unFocusColor="#e19d65" />
+                  <GridPane layoutX="107.0" layoutY="139.0" prefHeight="154.0" prefWidth="374.0">
+                    <columnConstraints>
+                      <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                      <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                    </columnConstraints>
+                    <rowConstraints>
+                      <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                      <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                      <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                    </rowConstraints>
+                     <children>
+                        <Label text="Nombre" textFill="#e19d65">
+                           <font>
+                              <Font name="Arial Black" size="15.0" />
+                           </font>
+                        </Label>
+                        <Label text="Descripción" textFill="#e19d65" GridPane.rowIndex="1">
+                           <font>
+                              <Font name="Arial Black" size="15.0" />
+                           </font>
+                        </Label>
+                        <Label text="Tipo" textFill="#e19d65" GridPane.rowIndex="2">
+                           <font>
+                              <Font name="Arial Black" size="15.0" />
+                           </font>
+                        </Label>
+                        <Label text="Dia" textFill="#e19d65" GridPane.rowIndex="3">
+                           <font>
+                              <Font name="Arial Black" size="15.0" />
+                           </font>
+                        </Label>
+                        <Label text="Precio" textFill="#e19d65" GridPane.rowIndex="4">
+                           <font>
+                              <Font name="Arial Black" size="15.0" />
+                           </font>
+                        </Label>
+                        <Label fx:id="campoNombreBuscar" text="Label" textFill="#905c28" GridPane.columnIndex="1" />
+                        <Label fx:id="campoDesBuscar" text="Label" textFill="#905c28" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+                        <Label fx:id="campoTipoBuscar" text="Label" textFill="#905c28" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+                        <Label fx:id="campoDiaBuscar" text="Label" textFill="#905c28" GridPane.columnIndex="1" GridPane.rowIndex="3" />
+                        <Label fx:id="campoPrecioBuscar" text="Label" textFill="#905c28" GridPane.columnIndex="1" GridPane.rowIndex="4" />
+                     </children>
+                  </GridPane>
+                  <JFXButton fx:id="botonBuscar" layoutX="481.0" layoutY="81.0" onAction="#buscar" text="Buscar" textFill="#836969">
+                     <font>
+                        <Font name="Arial Black" size="12.0" />
+                     </font>
+                  </JFXButton>
                </children>
             </AnchorPane>
         </content>
