--- a/src/Ventanas/Ventana_AdministradorFXML.fxml
+++ b/src/Ventanas/Ventana_AdministradorFXML.fxml
@@ -1,24 +1,19 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import com.jfoenix.controls.JFXButton?>
-<?import javafx.scene.control.ButtonBar?>
 <?import javafx.scene.layout.BorderPane?>
-<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.VBox?>
 
 <BorderPane fx:id="borderPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="675.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controlador.Ventana_AdministradorFXML">
-   <top>
-      <HBox prefHeight="35.0" prefWidth="675.0" style="-fx-background-color: #5363EA;" BorderPane.alignment="CENTER">
+   <left>
+      <VBox prefHeight="400.0" prefWidth="90.0" style="-fx-background-color: #5363EA;" BorderPane.alignment="CENTER">
          <children>
-            <ButtonBar prefHeight="35.0" prefWidth="677.0">
-               <buttons>
-                  <JFXButton onMouseClicked="#boton_Pro" prefHeight="40.0" prefWidth="106.0" style="-fx-background-color: transparent; -fx-text-fill: #f0f0f0;" text="Productos" />
-                  <JFXButton onMouseClicked="#boton_Horario" prefHeight="40.0" prefWidth="106.0" style="-fx-background-color: transparent; -fx-text-fill: #f0f0f0;" text="Horario" />
-                  <JFXButton onMouseClicked="#boton_Menu" prefHeight="40.0" prefWidth="106.0" style="-fx-background-color: transparent; -fx-text-fill: #f0f0f0;" text="Menus" />
-                  <JFXButton onMouseClicked="#boton_Usu" prefHeight="40.0" prefWidth="106.0" style="-fx-background-color: transparent; -fx-text-fill: #f0f0f0;" text="Usuarios" />
-                  <JFXButton onMouseClicked="#boton_Salir" prefHeight="35.0" prefWidth="186.0" style="-fx-background-color: transparent; -fx-text-fill: #f0f0f0;" text="Salir" />
-               </buttons>
-            </ButtonBar>
+            <JFXButton onMouseClicked="#boton_Pro" prefHeight="40.0" prefWidth="106.0" style="-fx-background-color: transparent; -fx-text-fill: #f0f0f0;" text="Productos" />
+            <JFXButton onMouseClicked="#boton_Horario" prefHeight="40.0" prefWidth="106.0" style="-fx-background-color: transparent; -fx-text-fill: #f0f0f0;" text="Horario" />
+            <JFXButton onMouseClicked="#boton_Menu" prefHeight="40.0" prefWidth="106.0" style="-fx-background-color: transparent; -fx-text-fill: #f0f0f0;" text="Menus" />
+            <JFXButton onMouseClicked="#boton_Usu" prefHeight="40.0" prefWidth="106.0" style="-fx-background-color: transparent; -fx-text-fill: #f0f0f0;" text="Usuarios" />
+            <JFXButton onMouseClicked="#boton_Salir" prefHeight="35.0" prefWidth="186.0" style="-fx-background-color: transparent; -fx-text-fill: #f0f0f0;" text="Salir" />
          </children>
-      </HBox>
-   </top>
+      </VBox>
+   </left>
 </BorderPane>
