--- a/src/VentanaAux/AdminUsuario.fxml
+++ b/src/VentanaAux/AdminUsuario.fxml
@@ -1,6 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import com.jfoenix.controls.JFXButton?>
+<?import com.jfoenix.controls.JFXRadioButton?>
 <?import com.jfoenix.controls.JFXTabPane?>
+<?import com.jfoenix.controls.JFXTextField?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ButtonBar?>
 <?import javafx.scene.control.Label?>
@@ -8,6 +11,7 @@
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.control.TextField?>
+<?import javafx.scene.control.ToggleGroup?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
@@ -87,6 +91,27 @@
                      </children>
                   </AnchorPane>
                </content>
+            </Tab>
+            <Tab text="Agregar Usuario">
+              <content>
+                <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" style="-fx-background-color: #788EDE;">
+                     <children>
+                        <JFXTextField fx:id="nombreField" layoutX="134.0" layoutY="96.0" prefHeight="25.0" prefWidth="310.0" style="-fx-background-color: #ffffff;" />
+                        <Label layoutX="238.0" layoutY="79.0" text="Nombre de usuario" />
+                        <JFXTextField fx:id="contraField" layoutX="134.0" layoutY="151.0" prefHeight="25.0" prefWidth="310.0" style="-fx-background-color: #ffffff;" />
+                        <Label layoutX="259.0" layoutY="121.0" text="Contraseña" />
+                        <JFXRadioButton fx:id="radioAdmin" layoutX="135.0" layoutY="217.0" text="Administrador">
+                           <toggleGroup>
+                              <ToggleGroup fx:id="tipoUsuario" />
+                           </toggleGroup>
+                        </JFXRadioButton>
+                        <JFXRadioButton fx:id="radioEstudiante" layoutX="361.0" layoutY="217.0" text="Estudiante" toggleGroup="$tipoUsuario" />
+                        <JFXButton fx:id="botonAgregarUsu" layoutX="403.0" layoutY="275.0" onAction="#eventoAgregarUsu" text="Agregar" />
+                        <JFXTextField fx:id="matriculaField" layoutX="135.0" layoutY="54.0" prefHeight="25.0" prefWidth="310.0" style="-fx-background-color: #ffffff;" />
+                        <Label layoutX="261.0" layoutY="27.0" prefHeight="17.0" prefWidth="56.0" text="Matricula" />
+                     </children>
+                  </AnchorPane>
+              </content>
             </Tab>
          </tabs>
       </JFXTabPane>
