correcion de errores

--- a/src/Ventanas/Ventana_AdministradorFXML.fxml
+++ b/src/Ventanas/Ventana_AdministradorFXML.fxml
@@ -1,8 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import com.jfoenix.controls.JFXButton?>
+<?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.Font?>
 
 <BorderPane fx:id="borderPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="675.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controlador.Ventana_AdministradorFXML">
    <left>
@@ -16,4 +18,11 @@
          </children>
       </VBox>
    </left>
+   <center>
+      <Label alignment="CENTER" prefHeight="125.0" prefWidth="192.0" text="Bienvenido!!" BorderPane.alignment="CENTER">
+         <font>
+            <Font name="Rockwell" size="29.0" />
+         </font>
+      </Label>
+   </center>
 </BorderPane>
