--- a/src/VentanaAux/AdministradorHorario.fxml
+++ b/src/VentanaAux/AdministradorHorario.fxml
@@ -1,8 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import com.jfoenix.controls.JFXButton?>
+<?import com.jfoenix.controls.JFXComboBox?>
 <?import com.jfoenix.controls.JFXTabPane?>
 <?import com.jfoenix.controls.JFXTextField?>
+<?import com.jfoenix.controls.JFXTimePicker?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.Tab?>
 <?import javafx.scene.control.TableColumn?>
@@ -97,10 +99,10 @@
                               <Font size="18.0" />
                            </font>
                         </Label>
-                        <JFXTextField fx:id="aDia" layoutX="224.0" layoutY="106.0" />
-                        <JFXTextField fx:id="aHA" layoutX="224.0" layoutY="155.0" />
-                        <JFXTextField fx:id="aHC" layoutX="224.0" layoutY="204.0" />
-                        <JFXButton fx:id="HAgregar" layoutX="248.0" layoutY="292.0" onAction="#agregarHorario" style="-fx-background-color: #F9A29C;" text="Guardar" />
+                        <JFXButton fx:id="HAgregar" layoutX="211.0" layoutY="295.0" onAction="#agregarHorario" prefHeight="34.0" prefWidth="235.0" style="-fx-background-color: #F9A29C;" text="Guardar" />
+                        <JFXComboBox fx:id="comboBox" layoutX="211.0" layoutY="106.0" prefHeight="25.0" prefWidth="250.0" style="-fx-background-color: #fff;" />
+                        <JFXTimePicker fx:id="aHA" layoutX="211.0" layoutY="154.0" prefHeight="28.0" prefWidth="252.0" style="-fx-background-color: #fff;" />
+                        <JFXTimePicker fx:id="aHC" layoutX="211.0" layoutY="203.0" prefHeight="28.0" prefWidth="252.0" style="-fx-background-color: #fff;" />
                      </children>
                   </AnchorPane>
                </children>
