--- a/src/VentanaAux/EstudianteProducto.fxml
+++ b/src/VentanaAux/EstudianteProducto.fxml
@@ -21,14 +21,16 @@
         <content>
           <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" style="-fx-background-color: #FFDBD9;">
                <children>
-                  <TableView fx:id="tvProducto" layoutX="14.0" layoutY="25.0" prefHeight="319.0" prefWidth="435.0">
+                  <TableView fx:id="tvProducto" layoutY="35.0" prefHeight="335.0" prefWidth="600.0">
                      <columns>
                         <TableColumn fx:id="tabNombre" prefWidth="104.0" text="Nombre" />
-                        <TableColumn fx:id="tabDesc" prefWidth="168.0" text="Descripción" />
-                        <TableColumn fx:id="tabCanti" prefWidth="91.0" text="Cantidad" />
-                        <TableColumn fx:id="tabPrecio" prefWidth="69.0" text="Precio $" />
+                        <TableColumn fx:id="tabDesc" prefWidth="289.0" text="Descripción" />
+                        <TableColumn fx:id="tabCanti" prefWidth="89.0" text="Cantidad" />
+                        <TableColumn fx:id="tabPrecio" prefWidth="98.0" text="Precio $" />
                      </columns>
                   </TableView>
+                  <JFXTextField fx:id="busquedaUSU" layoutX="69.0" layoutY="2.0" prefHeight="31.0" prefWidth="530.0" style="-fx-background-color: #fff;" />
+                  <Label alignment="CENTER" layoutX="-1.0" layoutY="1.0" prefHeight="34.0" prefWidth="77.0" text="Buscar" textAlignment="JUSTIFY" />
                </children></AnchorPane>
         </content>
       </Tab>
