--- a/src/Ventanas/Ventana_EstudiantesFXML.fxml
+++ b/src/Ventanas/Ventana_EstudiantesFXML.fxml
@@ -2,8 +2,10 @@
 
 <?import com.jfoenix.controls.JFXButton?>
 <?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.Font?>
 
 <BorderPane fx:id="borderPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="675.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controlador.Ventana_EstudiantesFXMLController">
    <left>
@@ -32,4 +34,11 @@
          </children>
       </VBox>
    </left>
+   <center>
+      <Label alignment="CENTER" prefHeight="102.0" prefWidth="250.0" text="Bienvenido!!" BorderPane.alignment="CENTER">
+         <font>
+            <Font name="Rockwell" size="29.0" />
+         </font>
+      </Label>
+   </center>
 </BorderPane>
